--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,4 +113,12 @@
     },
     "cmake.configureOnEdit": false,
     "cmake.configureOnOpen": false,
+    "[typescript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
+    "typescript.surveys.enabled": false,
+    "typescript.suggest.autoImports": false,
+    "typescript.preferGoToSourceDefinition": true,
+    "typescript.preferences.quoteStyle": "single",
+    "typescript.format.semicolons": "remove"
 }
