Update Runner for newer Zig

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:OSDVF/positron.git
 [submodule "libs/zig-opengl"]
 	path = libs/zig-opengl
-	url = https://github.com/MasterQ32/zig-opengl.git
+	url = https://github.com/OSDVF/zig-opengl.git
 [submodule "libs/ctregex"]
 	path = libs/ctregex
 	url = git@github.com:alexnask/ctregex.zig.git
