Remove wolfssl as a git submodule (already have it from VCPKG)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ if(WOLFSSL AND NOT NO_SYSTEM_WOLFSSL)
     message(STATUS "Using system wolfssl")
 endif()
 
-if(CMAKE_BUILD_TYPE AND NOT DESHADER_BUILD_FLAGS MATCHES ".*\-Doptimize.*")
+if(CMAKE_BUILD_TYPE AND NOT DESHADER_BUILD_FLAGS MATCHES ".*\--release.*")
     if(CMAKE_BUILD_TYPE STREQUAL Release OR CMAKE_BUILD_TYPE STREQUAL RelWithDebInfo)
-        set(DESHADER_BUILD_FLAGS ${DESHADER_BUILD_FLAGS} -Doptimize=ReleaseSafe)
+        set(DESHADER_BUILD_FLAGS ${DESHADER_BUILD_FLAGS} --release=safe)
     elseif(CMAKE_BUILD_TYPE STREQUAL MinSizeRel)
-        set(DESHADER_BUILD_FLAGS ${DESHADER_BUILD_FLAGS} -Doptimize=ReleaseSmall)
+        set(DESHADER_BUILD_FLAGS ${DESHADER_BUILD_FLAGS} --release=small)
     endif()
 endif()
 
