--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,27 @@
 [submodule "libs/glsl_analyzer"]
 	path = libs/glsl_analyzer
-	url = git@github.com:OSDVF/glsl_analyzer.git
+	url = https://github.com/OSDVF/glsl_analyzer.git
 [submodule "libs/positron"]
 	path = libs/positron
-	url = git@github.com:OSDVF/positron.git
+	url = https://github.com/OSDVF/positron.git
 [submodule "libs/ctregex"]
 	path = libs/ctregex
-	url = git@github.com:alexnask/ctregex.zig.git
+	url = https://github.com/alexnask/ctregex.zig.git
 [submodule "libs/zig-header-gen"]
 	path = libs/zig-header-gen
-	url = git@github.com:suirad/zig-header-gen.git
+	url = https://github.com/OSDVF/zig-header-gen.git
 [submodule "libs/Vulkan-Docs"]
 	path = libs/Vulkan-Docs
-	url = git@github.com:KhronosGroup/Vulkan-Docs.git
+	url = https://github.com/KhronosGroup/Vulkan-Docs.git
 [submodule "editor/deshader-vscode"]
 	path = editor/deshader-vscode
-	url = git@github.com:OSDVF/deshader-vscode.git
+	url = https://github.com/OSDVF/deshader-vscode.git
 [submodule "libs/websocket"]
 	path = libs/websocket
-	url = git@github.com:OSDVF/websocket.zig.git
+	url = https://github.com/OSDVF/websocket.zig.git
 [submodule "bootstrap/llvm-ir-cmake"]
 	path = bootstrap/llvm-ir-cmake
-	url = git@github.com:compor/llvm-ir-cmake-utils.git
+	url = https://github.com/compor/llvm-ir-cmake-utils.git
 [submodule "editor/glsl-language-support"]
 	path = editor/glsl-language-support
 	url = https://github.com/filippofracascia/glsl-language-support.git
