--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -1,3 +1,29 @@
+# Copyright (C) 2024  Ondřej Sabela
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+# Creates a release when a tag is pushed
+# The release will have the tag name as the title.
+# The tag description will be used as the body, concatenated with the commit message.
+# If tag description contains the text "Release", the release will be marked as a stable release.
+# The release will contain the following files:
+# - deshader-git_*.deb
+# - deshader-git-*.tar.zst
+# - deshader-git-windows-*.zip
+
+# To skip building for a specific platform, add "skip linux" or "skip windows" to the commit message.
+
 name: packages
 on: push
 
@@ -69,19 +95,34 @@ jobs:
         working-directory: src/deshader
         continue-on-error: true
 
+      - name: Test windows build
+        if: ${{ success() && !contains(github.event.head_commit.message, 'skip windows') }}
+        run: wine deshader-run.exe -version
+        working-directory: src/deshader/zig-out/bin
+
       - name: Create windows ZIP
         id: windows-zip
         if: ${{ success() && !contains(github.event.head_commit.message, 'skip windows') }}
-        run: zip -r deshader-git-windows-${{ github.ref_name }}.zip bin/deshader.dll bin/deshader-run.exe bin/libwolfssl.dll bin/WebView2Loader.dll lib/deshader.ico include
+        run: zip -rj deshader-git-windows-${{ github.ref_name }}.zip bin
         working-directory: src/deshader/zig-out
         continue-on-error: true
+
+      - name: Add headers to ZIP
+        if: ${{ steps.windows-zip.conclusion == 'success' }}
+        run: zip -r deshader-git-windows-${{ github.ref_name }}.zip include lib
+        working-directory: src/deshader/zig-out
+        continue-on-error: true
+
+      - name: Get tag description
+        id: tag-desc
+        run: echo "desc=`git tag -l --format='%(contents:subject)' $(git describe --tags --abbrev=0)`" >> $GITHUB_OUTPUT
 
       - name: Create a Release
         if: ${{ steps.build-ubuntu.conclusion == 'success' || steps.build-arch.conclusion == 'success' || steps.windows-zip.conclusion == 'success' }}
         uses: softprops/action-gh-release@v2
         with:
-            prerelease: true
-            body: ${{ github.event.head_commit.message }}
+            prerelease: ${{ !contains(steps.tag-desc.outputs.desc, 'Release') }}
+            body: "${{ steps.tag-desc.outputs.desc }}\n${{ github.event.head_commit.message }}"
             files: |
                 ${{ steps.build-ubuntu.conclusion == 'success' && 'deshader-git_*.deb'}} 
                 ${{ steps.build-arch.conclusion == 'success' && 'deshader-git-*.tar.zst'}}
