--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -31,8 +31,44 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  ubuntu-mutli:
+    strategy:
+        matrix:
+            os: [ubuntu-20.04, ubuntu-22.04]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
+    if: startsWith(github.ref, 'refs/tags/') && !contains(github.event.head_commit.message, 'skip linux')
+    steps:
+      - uses: actions/checkout@v4
+        with:
+            repository: 'osdvf/deshader-build'
+
+      - uses: mlugg/setup-zig@v1
+        with:
+            version: 0.13.0
+
+      - uses: oven-sh/setup-bun@v1
+        with:
+            bun-version: latest
+
+      - name: Install Makedeb
+        run: bash -c "$(wget -qO - 'https://shlink.makedeb.org/install')"
+        env: 
+            TERM: xterm-256color
+            MAKEDEB_RELEASE: makedeb
+
+      - name: Build for Ubuntu
+        id: build-ubuntu
+        run: bash makedeb.bash
+
+      - name: Archive distribution package
+        uses: actions/upload-artifact@v4
+        with:
+          name: deshader-${{ matrix.os }}
+          path: deshader-git_*.deb
+
+  ubuntu-arch-win:
+    runs-on: ubuntu-24.04
     timeout-minutes: 25
     if: startsWith(github.ref, 'refs/tags/')
     steps:
@@ -54,6 +90,14 @@ jobs:
         run: docker run -e EXPORT_PKG=true -e CHECKSUM_SRC=true -e PGPKEY="$PGP_KEY" -v "$(pwd):/pkg" ghcr.io/zaggash/arch-makepkg:latest
         continue-on-error: true
 
+      - name: Archive Arch package
+        uses: actions/upload-artifact@v4
+        continue-on-error: true
+        if: steps.build-arch.conclusion == 'success'
+        with:
+          name: deshader-arch
+          path: deshader-git-*.tar.zst
+
       - name: Remove cloned source # as it is incompatible between makepkg and makedeb
         if: ${{ !contains(github.event.head_commit.message, 'skip linux') }}
         run: rm -rf deshader
@@ -71,12 +115,22 @@ jobs:
         run: bash makedeb.bash
         continue-on-error: true
 
+      - name: Archive ubuntu package
+        uses: actions/upload-artifact@v4
+        continue-on-error: true
+        if: steps.build-ubuntu.conclusion == 'success'
+        with:
+          name: deshader-ubuntu-24.04
+          path: deshader-git_*.deb
+
       - name: Install Wine
+        id: install-wine
         if: ${{ !contains(github.event.head_commit.message, 'skip windows') }}
         run: sudo dpkg --add-architecture i386 && sudo apt-get update && sudo apt-get install -y wine32 wine64 wine-binfmt
+        continue-on-error: true
 
       - name: Uninstall Mono
-        if: ${{ !contains(github.event.head_commit.message, 'skip windows') }}
+        if: steps.install-wine.conclusion == 'success'
         run: sudo apt-get remove -y mono-devel mono-complete mono-runtime
         continue-on-error: true
 
@@ -89,20 +143,25 @@ jobs:
         continue-on-error: true
 
       - name: Cross-compile for Windows
-        if: ${{ success() && !contains(github.event.head_commit.message, 'skip windows') }}
+        id: win-compile
+        if: steps.install-wine.conclusion == 'success'
         run: for a in 1 2; do zig build deshader launcher -fwine -Dtarget=x86_64-windows-gnu --release=safe; done || bash fix_c_import.sh && zig build deshader launcher generate_headers generate_stubs -fwine -Dtarget=x86_64-windows-gnu --release=safe
         shell: bash
         working-directory: src/deshader
         continue-on-error: true
 
       - name: Test windows build
-        if: ${{ success() && !contains(github.event.head_commit.message, 'skip windows') }}
+        if: steps.win-compile.conclusion == 'success'
         run: wine deshader-run.exe -version
         working-directory: src/deshader/zig-out/bin
 
+      - name: Remove header generator binary
+        run: rm -f src/deshader/zig-out/bin/generate_headers
+        continue-on-error: true
+
       - name: Create windows ZIP
         id: windows-zip
-        if: ${{ success() && !contains(github.event.head_commit.message, 'skip windows') }}
+        if: steps.win-compile.conclusion == 'success'
         run: zip -rj deshader-git-windows-${{ github.ref_name }}.zip bin
         working-directory: src/deshader/zig-out
         continue-on-error: true
@@ -113,17 +172,36 @@ jobs:
         working-directory: src/deshader/zig-out
         continue-on-error: true
 
+      - name: Archive Windows package
+        uses: actions/upload-artifact@v4
+        continue-on-error: true
+        if: steps.windows-zip.conclusion == 'success'
+        with:
+          name: deshader-windows
+          path: deshader-git-windows*.zip
+
+  create-release:
+    runs-on: ubuntu-latest
+    needs: [ubuntu-mutli, ubuntu-arch-win]
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref_name }}
+          fetch-tags: true
+
       - name: Get tag description
         id: tag-desc
         run: echo "desc=`git tag -l --format='%(contents:subject)' $(git describe --tags --abbrev=0)`" >> $GITHUB_OUTPUT
 
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+
       - name: Create a Release
-        if: ${{ steps.build-ubuntu.conclusion == 'success' || steps.build-arch.conclusion == 'success' || steps.windows-zip.conclusion == 'success' }}
         uses: softprops/action-gh-release@v2
         with:
             prerelease: ${{ !contains(steps.tag-desc.outputs.desc, 'Release') }}
             body: "${{ steps.tag-desc.outputs.desc }}\n${{ github.event.head_commit.message }}"
-            files: |
-                ${{ steps.build-ubuntu.conclusion == 'success' && 'deshader-git_*.deb'}} 
-                ${{ steps.build-arch.conclusion == 'success' && 'deshader-git-*.tar.zst'}}
-                ${{ steps.windows-zip.conclusion == 'success' && format('src/deshader/zig-out/deshader-git-windows-{0}.zip', github.ref_name) }}
+            files: deshader-git*
