--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -68,7 +68,7 @@ jobs:
           path: deshader-git-*.deb
 
   ubuntu-arch-win:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 25
     if: startsWith(github.ref, 'refs/tags/')
     steps:
@@ -120,7 +120,7 @@ jobs:
         continue-on-error: true
         if: steps.build-ubuntu.conclusion == 'success'
         with:
-          name: deshader-ubuntu-24.04
+          name: deshader-ubuntu-latest
           path: deshader-git-*.deb
 
       - name: Install Wine
@@ -160,6 +160,7 @@ jobs:
         if: steps.win-compile.conclusion == 'success'
         run: wine deshader-run.exe -version
         working-directory: src/deshader/zig-out/bin
+        continue-on-error: true
 
       - name: Remove header generator binary
         run: rm -f src/deshader/zig-out/bin/generate_headers
@@ -211,3 +212,9 @@ jobs:
             prerelease: ${{ !contains(steps.tag-desc.outputs.desc, 'Release') }}
             body: "${{ steps.tag-desc.outputs.desc }}\n${{ github.event.head_commit.message }}"
             files: deshader-git*
+
+      - name: Remove artifacts
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: deshader-*
+          failOnError: false
